--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ DB_PORT = 3306
 DB_NAME = 'fsdp_assignment'
 DB_USER = 'fsdp_admin'
 DB_PWD = 'admin'
-OMDB_API_KEY = 'your_omdb_api_key'
+OMDB_API_KEY = 'a551b80f'
