--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "handlebars": "^4.7.7",
     "moment": "^2.29.3",
     "mysql2": "^2.3.3",
+    "node-fetch": "^2.6.6",
     "nodemon": "^2.0.19",
     "passport": "^0.5.3",
     "passport-local": "^1.0.0",
