--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.4",
     "dotenv": "^16.0.1",
+    "ember": "^1.0.3",
     "express": "^4.18.1",
     "express-handlebars": "^6.0.2",
     "express-mysql-session": "^2.1.8",
     "express-session": "^1.15.6",
     "flash-messenger": "^1.1.1",
     "handlebars": "^4.7.7",
+    "handlebars-helper-equal": "^1.0.0",
+    "hbs": "^4.2.0",
     "moment": "^2.29.3",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
